# Monatize

./: .gitignore  Cargo.toml
ci/: smoke-2.py  smoke.py
crates/ai-runtime/: Cargo.toml
crates/ai-runtime/src/: lib.rs  main.rs
crates/browser-main/: Cargo.toml
crates/browser-main/src/: main.rs
crates/content-srv/: Cargo.toml
crates/content-srv-factory/: Cargo.toml
crates/content-srv-factory/src/: lib.rs
crates/content-srv/src/: main.rs
crates/crash-reporter/: Cargo.toml
crates/crash-reporter/src/: lib.rs  main.rs
crates/dom-embed/: Cargo.toml
crates/dom-embed/src/: lib.rs
crates/download-manager/: Cargo.toml
crates/download-manager/src/: lib.rs
crates/event-packet/: Cargo.toml
crates/event-packet/src/: lib.rs
crates/extension-api/: Cargo.toml
crates/extension-api/src/: lib.rs
crates/extension-host/: Cargo.toml
crates/extension-host/src/: lib.rs
crates/gpu-compositor/: Cargo.toml
crates/gpu-compositor/src/: lib.rs
crates/gpu-srv/: Cargo.toml
crates/gpu-srv/src/: lib.rs  main.rs
crates/gpui-app-host/: Cargo.toml
crates/gpui-app-host/src/: main.rs
crates/gpui-wpe-bridge/: Cargo.toml
crates/gpui-wpe-bridge/src/: lib.rs
crates/ipc-channel/: Cargo.toml
crates/ipc-channel/src/: lib.rs
crates/message-defs/: Cargo.toml  build.rs
crates/message-defs/idl/: core.idl
crates/message-defs/src/: lib.rs
crates/min-web-process/: Cargo.toml
crates/min-web-process/src/: main.rs
crates/mock-network/: Cargo.toml
crates/mock-network/src/: lib.rs
crates/network-srv/: Cargo.toml
crates/network-srv/src/: lib.rs  main.rs
crates/permission-manager/: Cargo.toml
crates/permission-manager/src/: lib.rs
crates/pref-store/: Cargo.toml
crates/pref-store/src/: lib.rs
crates/print-manager/: Cargo.toml
crates/print-manager/src/: lib.rs
crates/servo-lite/: Cargo.toml
crates/servo-lite/src/: lib.rs
crates/site-isolation/: Cargo.toml
crates/site-isolation/src/: lib.rs
crates/tab-manager/: Cargo.toml
crates/tab-manager/src/: lib.rs
crates/texture-verify/: Cargo.toml
crates/texture-verify/src/: lib.rs
crates/update-service/: Cargo.toml
crates/update-service/src/: lib.rs  main.rs
crates/user-script/: Cargo.toml
crates/user-script/src/: lib.rs
crates/window-ai-api/: Cargo.toml
crates/window-ai-api/src/: lib.rs
crates/window-ai-api/tests/: wasm.rs
crates/wpe-sys/: Cargo.toml
crates/wpe-sys/src/: lib.rs
design/: design_specs-template.md
design_ai-native/: README.md  UPDATE_SUMMARY.md  ai_core_mcp_architecture.md  architecture.md  phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  roadmap.md  roadmap_mcp_update.md
design_phase-0/: phase-0-design-spec.md  phase-0-summary.md
design_phase-1/: phase-1-design-spec.md  phase-1-summary.md
design_phase-2/: phase-2-design-spec.md
req/: phase-0.md  phase-1.md  phase-2.md  phase-3.md  req.md
scripts/: smoke-0.py
xtask/: Cargo.toml
xtask/src/: main.rs
