[workspace]
resolver = "2"
members = [
    "crates/wpe-sys",
    "crates/gpui-wpe-bridge",
    "crates/min-web-process",
    "crates/gpui-app-host",
    "crates/event-packet",
    "crates/mock-network",
    "crates/texture-verify",
    "crates/ipc-channel",
    "crates/message-defs",
    "crates/network-srv",
    "crates/gpu-srv",
    "crates/servo-lite",
    "crates/dom-embed",
    "crates/ai-runtime",
    "crates/content-srv",
    "crates/browser-main",
    "crates/window-ai-api",
    "crates/tab-manager",
    "crates/site-isolation",
    "crates/content-srv-factory",
    "crates/gpu-compositor",

    "crates/permission-manager",
    "crates/pref-store",
    "crates/download-manager",
    "crates/print-manager",
    "crates/extension-host",
    "crates/extension-api",
    "crates/user-script",
    "crates/update-service",
    "crates/crash-reporter",

    "xtask",
]

