[package]
name = "network-srv"
version = "0.1.0"
edition = "2021"

[dependencies]
message-defs = { path = "../message-defs" }
bytes = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
wiremock = "0.5"

