[package]
name = "window-ai-api"
version = "0.1.0"
edition = "2021"

[dependencies]
ai-runtime = { path = "../ai-runtime" }

[dev-dependencies]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

